# dart_c_lib

./: .gitignore  CMakeLists.txt  README.md  library.c  library.def
example/: pubspec.yaml
